crates/pixi_build_type_conversions/src/snapshots/pixi_build_type_conversions__project_model__tests__conversions_v1_examples@array-api-extra.snap
---
source: crates/pixi_build_type_conversions/src/project_model.rs
assertion_line: 318
expression: project_model
---
{
  "name": "array-api-extra",
  "buildStringPrefix": null,
  "buildNumber": null,
  "version": "0.8.0",
  "description": null,
  "authors": null,
  "license": null,
  "licenseFile": null,
  "readme": null,
  "homepage": null,
  "repository": null,
  "documentation": null,
  "targets": {
    "defaultTarget": {
      "hostDependencies": {},
      "buildDependencies": {},
      "runDependencies": {},
      "runConstraints": {}
    }
  }
}
