crates/pixi_build_type_conversions/src/snapshots/pixi_build_type_conversions__project_model__tests__conversions_v1_examples@boltons.snap
---
source: crates/pixi_build_type_conversions/src/project_model.rs
expression: project_model
---
{
  "name": "boltons",
  "version": "0.1.0",
  "description": "Add a short description here",
  "authors": [
    "nichmor <nmorkotilo@gmail.com>"
  ],
  "license": null,
  "licenseFile": null,
  "readme": null,
  "homepage": null,
  "repository": null,
  "documentation": null,
  "targets": {
    "defaultTarget": {
      "hostDependencies": {
        "hatchling": {
          "binary": {
            "version": "*",
            "build": null,
            "buildNumber": null,
            "fileName": null,
            "channel": null,
            "subdir": null,
            "md5": null,
            "sha256": null
          }
        }
      },
      "buildDependencies": {},
      "runDependencies": {}
    },
    "targets": {}
  }
}
