crates/pixi_build_type_conversions/src/snapshots/pixi_build_type_conversions__project_model__tests__conversions_v1_examples@cpp-git-source.snap
---
source: crates/pixi_build_type_conversions/src/project_model.rs
assertion_line: 291
expression: project_model
---
{
  "name": "sdl_example",
  "buildStringPrefix": null,
  "buildNumber": null,
  "version": "0.1.0",
  "description": null,
  "authors": null,
  "license": null,
  "licenseFile": null,
  "readme": null,
  "homepage": null,
  "repository": null,
  "documentation": null,
  "targets": {
    "defaultTarget": {
      "hostDependencies": {
        "sdl2": {
          "binary": {
            "version": ">=2.26.5,<3.0",
            "build": null,
            "buildNumber": null,
            "fileName": null,
            "extras": null,
            "flags": null,
            "channel": null,
            "subdir": null,
            "md5": null,
            "sha256": null,
            "url": null,
            "license": null,
            "licenseFamily": null,
            "condition": null,
            "trackFeatures": null
          }
        }
      },
      "buildDependencies": {},
      "runDependencies": {},
      "runConstraints": {}
    },
    "targets": {}
  }
}
