crates/pixi_build_type_conversions/src/snapshots/pixi_build_type_conversions__project_model__tests__conversions_v1_examples@cpp-sdl.snap
---
source: crates/pixi_build_type_conversions/src/project_model.rs
assertion_line: 291
expression: project_model
---
{
  "name": "sdl_example",
  "buildStringPrefix": null,
  "buildNumber": null,
  "version": "0.1.0",
  "description": "Showcases how to create a simple C++ executable with Pixi",
  "authors": [
    "Bas Zalmstra <bas@prefix.dev>"
  ],
  "license": null,
  "licenseFile": null,
  "readme": null,
  "homepage": null,
  "repository": null,
  "documentation": null,
  "targets": {
    "defaultTarget": {
      "hostDependencies": {
        "sdl2": {
          "binary": {
            "version": ">=2.26.5,<3.0",
            "build": null,
            "buildNumber": null,
            "fileName": null,
            "channel": null,
            "subdir": null,
            "md5": null,
            "sha256": null,
            "url": null,
            "license": null,
            "condition": null
          }
        }
      },
      "buildDependencies": {},
      "runDependencies": {},
      "runConstraints": {}
    },
    "targets": {}
  }
}
