crates/pixi_build_type_conversions/src/snapshots/pixi_build_type_conversions__project_model__tests__conversions_v1_examples@dev.snap
---
source: crates/pixi_build_type_conversions/src/project_model.rs
assertion_line: 318
expression: project_model
---
{
  "name": "minimal-example",
  "buildStringPrefix": null,
  "buildNumber": null,
  "version": "0.1.0",
  "description": null,
  "authors": null,
  "license": null,
  "licenseFile": null,
  "readme": null,
  "homepage": null,
  "repository": null,
  "documentation": null,
  "targets": {
    "defaultTarget": {
      "hostDependencies": {
        "python": {
          "binary": {
            "version": ">=3.12.4,<4",
            "build": null,
            "buildNumber": null,
            "fileName": null,
            "extras": null,
            "flags": null,
            "channel": null,
            "subdir": null,
            "md5": null,
            "sha256": null,
            "url": null,
            "license": null,
            "condition": null
          }
        },
        "sdl2": {
          "binary": {
            "version": ">=2.26.5,<3.0",
            "build": null,
            "buildNumber": null,
            "fileName": null,
            "extras": null,
            "flags": null,
            "channel": null,
            "subdir": null,
            "md5": null,
            "sha256": null,
            "url": null,
            "license": null,
            "condition": null
          }
        }
      },
      "buildDependencies": {
        "cmake": {
          "binary": {
            "version": ">=3.27.8,<4.0",
            "build": null,
            "buildNumber": null,
            "fileName": null,
            "extras": null,
            "flags": null,
            "channel": null,
            "subdir": null,
            "md5": null,
            "sha256": null,
            "url": null,
            "license": null,
            "condition": null
          }
        }
      },
      "runDependencies": {
        "bat": {
          "binary": {
            "version": "*",
            "build": null,
            "buildNumber": null,
            "fileName": null,
            "extras": null,
            "flags": null,
            "channel": null,
            "subdir": null,
            "md5": null,
            "sha256": null,
            "url": null,
            "license": null,
            "condition": null
          }
        }
      },
      "runConstraints": {}
    }
  }
}
