crates/pixi_build_type_conversions/src/snapshots/pixi_build_type_conversions__project_model__tests__conversions_v1_examples@v3.snap
---
source: crates/pixi_build_type_conversions/src/project_model.rs
expression: project_model
---
{
  "name": null,
  "buildStringPrefix": null,
  "buildNumber": null,
  "version": null,
  "description": null,
  "buildFlags": [
    "a",
    "b"
  ],
  "authors": null,
  "license": null,
  "licenseFile": null,
  "readme": null,
  "homepage": null,
  "repository": null,
  "documentation": null,
  "targets": {
    "defaultTarget": {
      "hostDependencies": {},
      "buildDependencies": {},
      "runDependencies": {},
      "runConstraints": {},
      "extraDependencies": {
        "rust": {
          "bat": {
            "binary": {
              "version": "*",
              "build": null,
              "buildNumber": null,
              "fileName": null,
              "extras": null,
              "flags": null,
              "channel": null,
              "subdir": null,
              "md5": null,
              "sha256": null,
              "url": null,
              "license": null,
              "condition": {
                "MatchSpec": {
                  "name": "python",
                  "version": ">=3.10"
                }
              }
            }
          },
          "ripgrep": {
            "binary": {
              "version": "*",
              "build": null,
              "buildNumber": null,
              "fileName": null,
              "extras": null,
              "flags": null,
              "channel": null,
              "subdir": null,
              "md5": null,
              "sha256": null,
              "url": null,
              "license": null,
              "condition": null
            }
          }
        },
        "py": {
          "python": {
            "binary": {
              "version": "*",
              "build": null,
              "buildNumber": null,
              "fileName": null,
              "extras": null,
              "flags": null,
              "channel": null,
              "subdir": null,
              "md5": null,
              "sha256": null,
              "url": null,
              "license": null,
              "condition": null
            }
          }
        }
      }
    },
    "targets": {}
  }
}
